@@ -2,7 +2,9 @@ package ru.sherb.combination;
 
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.Iterator;
 import java.util.List;
 
 import static org.junit.Assert.*;
@@ -15,76 +17,76 @@ public class PermutationsWithRepetitionIteratorTest {
 
     @Test
     public void returnInitialValueFromDic() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(1, 1, 1, 1), actual);
+        assertEquals(Arrays.asList(1, 1, 1, 1), actual);
     }
 
     @Test
     public void next() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(1, 1, 1, 2), actual);
+        assertEquals(Arrays.asList(1, 1, 1, 2), actual);
     }
 
     @Test
     public void next2() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(1, 1, 2, 1), actual);
+        assertEquals(Arrays.asList(1, 1, 2, 1), actual);
     }
 
     @Test
     public void next3() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(1, 1, 2, 2), actual);
+        assertEquals(Arrays.asList(1, 1, 2, 2), actual);
     }
 
     @Test
     public void next4() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(1, 2, 1, 1), actual);
+        assertEquals(Arrays.asList(1, 2, 1, 1), actual);
     }
 
     @Test
     public void next5() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(1, 2, 1, 2), actual);
+        assertEquals(Arrays.asList(1, 2, 1, 2), actual);
     }
 
     @Test
     public void next6() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
@@ -92,14 +94,14 @@ public class PermutationsWithRepetitionIteratorTest {
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(1, 2, 2, 1), actual);
+        assertEquals(Arrays.asList(1, 2, 2, 1), actual);
     }
 
     @Test
     public void next7() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
@@ -108,14 +110,14 @@ public class PermutationsWithRepetitionIteratorTest {
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(1, 2, 2, 2), actual);
+        assertEquals(Arrays.asList(1, 2, 2, 2), actual);
     }
 
     @Test
     public void next8() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
@@ -125,14 +127,14 @@ public class PermutationsWithRepetitionIteratorTest {
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(2, 1, 1, 1), actual);
+        assertEquals(Arrays.asList(2, 1, 1, 1), actual);
     }
 
     @Test
     public void next9() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
@@ -143,14 +145,14 @@ public class PermutationsWithRepetitionIteratorTest {
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(2, 1, 1, 2), actual);
+        assertEquals(Arrays.asList(2, 1, 1, 2), actual);
     }
 
     @Test
     public void next10() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
@@ -162,14 +164,14 @@ public class PermutationsWithRepetitionIteratorTest {
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(2, 1, 2, 1), actual);
+        assertEquals(Arrays.asList(2, 1, 2, 1), actual);
     }
 
     @Test
     public void next11() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
@@ -182,14 +184,14 @@ public class PermutationsWithRepetitionIteratorTest {
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(2, 1, 2, 2), actual);
+        assertEquals(Arrays.asList(2, 1, 2, 2), actual);
     }
 
     @Test
     public void next12() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
@@ -203,14 +205,14 @@ public class PermutationsWithRepetitionIteratorTest {
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(2, 2, 1, 1), actual);
+        assertEquals(Arrays.asList(2, 2, 1, 1), actual);
     }
 
     @Test
     public void next13() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
@@ -225,14 +227,14 @@ public class PermutationsWithRepetitionIteratorTest {
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(2, 2, 1, 2), actual);
+        assertEquals(Arrays.asList(2, 2, 1, 2), actual);
     }
 
     @Test
     public void next14() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
@@ -248,14 +250,14 @@ public class PermutationsWithRepetitionIteratorTest {
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(2, 2, 2, 1), actual);
+        assertEquals(Arrays.asList(2, 2, 2, 1), actual);
     }
 
     @Test
     public void next15() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
@@ -272,14 +274,14 @@ public class PermutationsWithRepetitionIteratorTest {
         iterator.next();
         iterator.next();
         iterator.next();
-        var actual = iterator.next();
+        List<Integer> actual = iterator.next();
 
-        assertEquals(List.of(2, 2, 2, 2), actual);
+        assertEquals(Arrays.asList(2, 2, 2, 2), actual);
     }
 
     @Test
     public void stopAfterFullCombinations() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 4);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 4);
 
         iterator.next();
         iterator.next();
@@ -304,13 +306,13 @@ public class PermutationsWithRepetitionIteratorTest {
 
     @Test
     public void checkContract() {
-        var iterator = new PermutationsWithRepetitionIterator<>(List.of(1, 2), 3);
+        Iterator<List<Integer>> iterator = new PermutationsWithRepetitionIterator<>(Arrays.asList(1, 2), 3);
 
         List<Integer> next = Collections.emptyList();
         while (iterator.hasNext()) {
             next = iterator.next();
         }
 
-        assertEquals(List.of(2, 2, 2), next);
+        assertEquals(Arrays.asList(2, 2, 2), next);
     }
 }
